Update .gitignore to correct folder name for improved accuracy

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Ignora questi file specifici e cartelle
 repo-structure.md
 repo-structure.ps1
-aruba-delivery
+aruba
 
 # Evita file temporanei e segreti
 *.log
